# SunlabParallelNN

./: .gitignore  CMakeLists.txt  README.md  build_times.csv  compare_results.csv  cpu_compare  cpu_keyframe_bench  cpu_octree_build_bench  gen_kitti  generate_synth_kitti.cpp  keyframe_bursty.csv  keyframe_results.csv  keyframe_threads.csv  kitti_bench  plot_speedups.py  results_kitti.csv  test_tbb.cpp
cpu/: CMakeLists.txt  bruteForceKNN.cpp  bruteForceKNN.hpp  cpu_bruteforce_main.cpp  cpu_compare_seq_alg1_alg2.cpp  cpu_gpu_kitti_bench.cpp  cpu_keyframe_bench.cpp  cpu_knn_benchmark  cpu_knn_benchmark.cpp  cpu_octree_build_bench.cpp  cpu_octree_tests  cpu_octree_tests.cpp  kitti_loader.hpp  metrics.hpp  octree.cpp  octree.hpp  octree_knn.cpp  octree_knn.hpp  test_std.cpp  utils.hpp
docs/: spec.md
gpu/: CMakeLists.txt  bruteForceKNN.cu  test_cuda  test_cuda.cu
scripts/: generateSynthetic.py
